# hmda_data_manager

./: .gitignore  AGENTS.md  CLAUDE.md  EXTENSIONS.md  HMDALoader.py  LICENSE  PRE2007_DATA_ANALYSIS.md  README.md  TODO.md  __init__.py  config.py  convert_hmda_to_stata.py  create_summary_files.py  create_zip_tract_crosswalk.py  download_hmda_data.py  examine_exempt_reporters.py  example_load_dc.py  hello.py  hmda_outlier_detection.py  hmda_public_lar_schema.html  import_hmda_data.py  import_support_functions.py  inspect_pre2007_2006.py  isolation_forest_example.ipynb  match_hmda_sellers_purchasers_post2018.py  match_hmda_sellers_purchasers_pre2018.py  matching_support_functions.py  misc_cleaning_functions.py  mtgdicts.py  planning.md  pyarrow_dataset_example.py  pyproject.toml
docs/: DATA_QUALITY_ISSUES.md  EXTENSIONS.md  PLANNING.md  PRE2007_DATA_ANALYSIS.md  PREFERENCES.md  TODO.md
examples/: 01_example_download_hmda_data.py  02_example_import_workflow_post2018.py  03_example_import_workflow_2007_2017.py  04_example_import_workflow_pre2007.py  99_examine_exempt_reporters.py  99_example_create_summaries.py  99_example_load_dc_purchases.py  99_example_print_schema.py  99_example_print_year_type_summary.py  99_example_sample_silver_data.py  99_isolation_forest_example.ipynb  99_isolation_forest_example.py  README.md  __init__.py  examine_exempt_reporters.py  example_create_summaries.py  example_download_hmda_data.py  example_hmda_outlier_detection.py  example_import_workflow_post2018.py  example_load_dc.py  example_load_dc_purchases.py  inspect_bronze.py  (+3 more)
(+40 files in other folders)
