[project]
name = "hmda-data-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "pyod>=2.0.4",
    "python-decouple>=3.8",
    "scipy>=1.15.2",
]
